--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": "14.7.0",
+    "npm": "6.14.7"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
